Atualização de detalhes de texto do show

--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -25,7 +25,7 @@
 		  </nav>
 	</header>
 	<div th:each="evento: ${evento}" class="container detalhesEvento">
-		<h5>Detalhes do evento</h5>
+		<h5>Detalhes do show</h5>
 		<div class="row">
 			<p>Nome: <span th:text="${evento.nome}"></span></p>
 			<p>Local: <span th:text="${evento.local}"></span></p>
