--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 	<table class="container striped">
 		<thead>
 			<tr>
-				<td>Nomes</td>
+				<td>Nome</td>
 				<td>Local</td>
 				<td>Data</td>
 				<td>Horário</td>
