--- a/src/main/resources/templates/convidado/formConvidado.html
+++ b/src/main/resources/templates/convidado/formConvidado.html
@@ -39,7 +39,7 @@
 			</div>
 			<div class="row">
 				<div class="input-field col s12">
-					Observação: <input type="text" name="rg" th:value="${convidado.observacao}" />	
+					Observação: <input type="text" name="observacao" th:value="${convidado.observacao}" />	
 				</div>
 			</div>
 			<button class="waves-effect waves-light btn" type="submit">Salvar</button>
