--- a/src/main/resources/templates/convidado/formConvidado.html
+++ b/src/main/resources/templates/convidado/formConvidado.html
@@ -20,7 +20,7 @@
 		    <div class="nav-wrapper">
 		      <a href="#" class="brand-logo">Alteração de Convidado</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">list</i>Lista de Eventos</a></li>
+		        <li><a th:href="@{'/' + ${evento.codigo}}" class="waves-effect waves-light btn"><i class="material-icons left">arrow_back</i>Voltar</a></li>
 		      </ul>
 		    </div>
 		  </nav>
